--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -100,25 +100,25 @@
             margin: 20px auto 0 auto;
             width: 125px;
         }
-        .logo-container {
-            position: relative;
-            width: 200px;
-            height: auto;
-            top: 50px;
-            right: 0;
-            box-sizing: border-box;
-            margin: auto;
-            left: 0;
+        // .logo-container {
+        //     position: relative;
+        //     width: 200px;
+        //     height: auto;
+        //     top: 50px;
+        //     right: 0;
+        //     box-sizing: border-box;
+        //     margin: auto;
+        //     left: 0;
 
-            .svg {
-                position: absolute;
-                top: auto;
-                right: auto;
-                bottom: auto;
-                left: 0;
-                margin: auto;
-            }
-        }
+            // .svg {
+            //     position: absolute;
+            //     top: auto;
+            //     right: auto;
+            //     bottom: auto;
+            //     left: 0;
+            //     margin: auto;
+            // }
+        // }
     }
 }
 
