--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -68,6 +68,7 @@
         border-radius: 4px;
 
         &:hover{
+            transform: scale(0.9);
             background: #e88607;
             color: #fff;
         }
