--- a/src/components/Home/Logo2/index.scss
+++ b/src/components/Home/Logo2/index.scss
@@ -51,3 +51,28 @@
         }
     }
 }
+
+@media screen and (max-width: 1200px) {
+    .container.svg {
+        position: initial;
+        margin: 0;
+        padding-top: 80px;
+        width: 40%;
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    .container.svg {
+        width: 50%;
+    }
+    #tsparticles {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .container.svg {
+        width: 60%;
+    }
+}
