--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -123,13 +123,24 @@
 }
 
 @media screen and (max-width: 1200px) {
-    #tsparticles {
-        display: none;
-    }    
+  
 
     .home-page {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
         h1 {
             font-size: 6rem;
         }
+        .text-zone {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        
+
     }
+
 }
