--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -209,11 +209,40 @@
             margin-left: 20px;
             margin-top: 20px;
         }
-        .image-box {
-            position: absolute;            
-            max-width: calc(50% - 10px);
-            height: 18rem;
-            flex: 50%;
+        .images-container {
+            width: 100%;
+            height: 100%;
+
+            .image-box {
+        
+                max-width: calc(50% - 10px);
+                height: 400px;
+                flex: 50%;
+            }
+        }
+        
+    }
+}
+
+@media screen and (max-width: 425px) {
+    
+    .portfolio-page { 
+
+        .images-container {
+            width: 100%;
+            height: 100%;
+    
+            .image-box {
+        
+                max-width: calc(50% - 10px);
+                height: 200px;
+                flex: 50%;
+            }
+
+            .content .title {
+                font-size: 18px;
+            }
         }
     }
+    
 }
