--- a/src/components/Skills/index.scss
+++ b/src/components/Skills/index.scss
@@ -1,74 +1,82 @@
-.stage-cube-cont {
-    width: 50%;
-    height: 100%;
-    top: 0;
-    padding-top: 18%;
-    margin-left: 0;
-    position: absolute;
-    right: 0;
-    overflow: hidden;
+
+@media screen and (max-width: 1440px) {
+    .container.skills-page {
+        overflow: visible;
+        box-sizing: border-box;
+        height: auto;
+        display: block;
+        .tagcloud-container {
+            margin: 0;
+            padding: 0;
+            position: fixed;
+            width: calc(50%); 
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            .tagcloud {
+                margin: 0;
+                width: 100%;
+                height: 100%;             
+            }   
+        }
+    }   
 }
 
-.cubespinner {
-    animation-name: spincube;
-    animation-timing-function: ease-in-out;
-    animation-duration: infinite;
-    animation-duration: 12s;
-    transform-style: preserve-3d;
-    transform-origin: 100px 100px 0;
-    margin-left: calc(50% - 100px);    
 
-    div {
-        position: absolute;
-        width: 200px;
-        height: 200px;
-        border: 1px solid #ccc;
-        background: rgba(255,255,255, 0.4);
-        font-size: 100px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        box-shadow: 0 0 20px 0px lightyellow;
+@media screen and (max-width: 1200px) {
+        .container.skills-page {  
+            width: 100%;
+            height: 100vh;
+
+            .tagcloud-container {
+                position: initial;
+                width: 100%;
+            
+            }
+        }
     }
 
-    .face1 {
-        transform: translateZ(100px);
+@media screen and (max-width: 1024px) {
+    .container.skills-page {     
+
+        .tagcloud-container {
+            .tagcloud {
+                margin: 0;
+                padding: 0;
+            }
+        }
     }
-    .face2 {
-        transform: rotateY(90deg) translateZ(100px);
-    }
-    .face3 {
-        transform: rotateY(90deg) rotateX(90deg) translateZ(100px);
-    }
-    .face4 {
-        transform: rotateY(180deg) rotateZ(90deg) translateZ(100px);
-    }
-    .face5 {
-        transform: rotateY(-90deg) rotateZ(90deg) translateZ(100px);
-    }
-    .face6 {
-        transform: rotateX(-90deg) translateZ(100px);
+}
+@media screen and (max-width: 768px) {    
+    
+
+    .container.skills-page {
+        
+        .tagcloud-container {
+            width: 100%;
+            height: 70vh;
+            padding-top: 10%;
+            
+
+            .tagcloud {
+                width: 50%;
+                height: auto;
+            }
+        }
     }
 }
 
-@keyframes spincube {
-    from,
-    to {
-        transfrom: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
-    }
-    16% {
-        transfrom: rotateY(-90deg);
-    }
-    33% {
-        transform: rotateY(-90deg) rotateZ(90deg);
-    }
-    50% {
-        transform: rotateY(-180deg) rotateZ(90deg);
-    }
-    66% {
-        transform: rotateY(-270deg) rotateZ(90deg);
-    }
-    83% {
-        transform: rotateX(90deg) rotateZ(90deg)
+
+@media screen and (max-width: 425px) {
+    .container.skills-page {
+        .tagcloud-container {
+            
+            .tagcloud {
+                padding-top: 15%;
+                width: 20%;
+                height: auto;
+            }        
+        }
     }
 }
