--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -188,6 +188,7 @@
             width: 100%;
             height: auto;
             transition: linear;
+            transition-duration: 0.5s;
 
             img {
                 width: 70%;
