--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -187,7 +187,7 @@
             z-index: 998;
             width: 100%;
             height: auto;
-            transition: linear;
+            transition: ease-in-out;
             transition-duration: 0.5s;
 
             img {
