--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -145,7 +145,12 @@
         z-index: 10;
         overflow-y:scroll;
         overflow-x:hidden;  
-
+        .gallery-background {
+            
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+        }
 
         .all-btn {
             color: #fff;
@@ -184,7 +189,7 @@
             left: 0;
             display: flex;
             justify-content: center;
-            background-color: rgba(0, 0, 0, 0.8);
+            
             z-index: 998;
             width: 100%;
             height: auto;
