--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -148,7 +148,7 @@
         .gallery-background {
             
             width: 100%;
-            height: 100%;
+            height: auto;
             background-color: rgba(0, 0, 0, 0.8);
         }
 
