--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -53,7 +53,7 @@
 .container.skills-page {
     
     h1 {
-        font-size: 65px;
+        font-size: 70px;
         font-family: 'Coolvetica';
         color: #e88607;
         font-weight: 400;
@@ -89,7 +89,7 @@
         }
     }
     p{
-        font-size: 15px;
+        font-size: 17px;
         color: #0e0e0e;
         font-family: sans-serif;
         font-weight: 400;
@@ -105,6 +105,11 @@
         }
         &:nth-last-of-type(3) {
             animation-delay: 1.3s;
+        }
+
+        a{
+            font-style: none;
+            color: #e88607;
         }
     }
     .text-animate-hover {
