--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -187,7 +187,7 @@
             z-index: 998;
             width: 100%;
             height: auto;
-            
+            overflow: hidden;            
 
             img {
                 width: 70%;
