--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -186,7 +186,7 @@
             background-color: rgba(0, 0, 0, 0.8);
             z-index: 998;
             width: 100%;
-            height: auto;
+            height: 100%;
             overflow: hidden;            
 
             img {
