--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -11,191 +11,198 @@
         margin-top: 100px;
     }
 
-    .images-container {
-        display: flex;
-        gap: 15px;
-        flex-wrap: wrap;
-        padding-bottom: 100px;
-        margin: 0;
+    .portfolio-list {
         width: 100%;
         height: 100%;
 
-        .image-box {
-            position: relative;
-            flex:  1 1 20%;
-            height: 400px;
-            overflow: hidden;
-            border-radius: 10px;
-            max-width: calc(25% - 10px);
-
-            img {
-                display: block;
-                transition: transform .4s;
-            }
-
-            &:hover img {
-                transform: scale(1.5);
-                transform-origin: 50% 50%;
-            }
-            
-            .portfolio-image {
-                position: absolute;
-                z-index: 1;
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                object-position: top;
-            }
-    
-            .content {
-                position: absolute;
-                width: 100%;
-                z-index: 3;
-                padding: 10px 20px;
-                transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
-                background: linear-gradient(
-                    180deg,
-                    rgba(0, 0, 0, 0.4) 0 ,
-                    rgba(0,0,0, 1)
-                );
-                bottom: -70px;
-            }
-    
-            .title {
-                margin-bottom: 0;
-                margin-top: 0;
-                color: #fff;
-                font-size: 24px;
-                font-weight: 500;
-                line-height: 24px;
-            }
-    
-            .description {
-                font-size: 14px;
-                margin-bottom: 5px;
-                color: #fff;
-                font-weight: 700;
-            }
-            .btn {
-                margin-top: 30px;
-                margin-bottom: 10px;
-                padding: 0 23px;
-                height: 40px;
-                line-height: 34px;
-                border: 2px solid #e88607;
-                border-radius: 4px;
-                font-size: 14px;
-                color: #fff;
-                background: transparent;
-                text-transform: uppercase;
-                font-weight: 700;
-                transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
-                cursor: pointer;
-            }
-    
-            .btn:hover {
-                transform: translateY(3px);
-                background: #e88607;
-            }
-    
-            
-    
-            &:after {
-                content: "";
-                background: linear-gradient(180deg, #e88607, #000);
-                position: absolute;
-                left: 0;
-                right: 0;
-                bottom: 0;
-                top: 0;
-                width: 100%;
-                height: 100%;
-                transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
-                opacity: 0;
-                z-index: 2;
-            }
-    
-            &:hover:after {
-                opacity: 0.3;                
-            }
-
-            
-    
-            &:hover .content {
-                bottom: 0;
-                background: transparent;
-            }
-
-
-        }
-    }
-
-    .galleryWrap {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        position: fixed;
-        z-index: 10;
-        overflow-y:scroll;
-        overflow-x:hidden;  
-
-        .all-btn {
-            color: #fff;
-            opacity: 1;
-            
-            
-            .btnClose {
-                position: fixed;
-                cursor: pointer;
-                top: 40px;
-                right: 40px;
-                z-index: 999;
-            }
-
-            .btnPrev{
-                position: fixed;
-                cursor: pointer;
-                top: 50%;
-                left: 100px;
-                z-index: 999;
-            }
-
-            .btnNext{
-                position: fixed;
-                cursor: pointer;
-                top: 50%;
-                right: 100px;
-                z-index: 999;
-            }
-        }
-            
-
-        .fullScreenImage {
-            position: absolute;
-            top: 0;
-            left: 0;
+        .images-container {
             display: flex;
-            justify-content: center;
-            background-color: rgba(0, 0, 0, 0.8);
-            z-index: 998;
+            gap: 15px;
+            flex-wrap: wrap;
+            padding-bottom: 100px;
+            margin: 0;
             width: 100%;
             height: 100%;
-            overflow: hidden;            
-
-            img {
-                width: 70%;
-                margin: auto;                    
-                overflow: visible;
+    
+            .image-box {
+                position: relative;
+                flex:  1 1 20%;
+                height: 400px;
+                overflow: hidden;
+                border-radius: 10px;
+                max-width: calc(25% - 10px);
+    
+                img {
+                    display: block;
+                    transition: transform .4s;
+                }
+    
+                &:hover img {
+                    transform: scale(1.5);
+                    transform-origin: 50% 50%;
+                }
+                
+                .portfolio-image {
+                    position: absolute;
+                    z-index: 1;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    object-position: top;
+                }
+        
+                .content {
+                    position: absolute;
+                    width: 100%;
+                    z-index: 3;
+                    padding: 10px 20px;
+                    transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+                    background: linear-gradient(
+                        180deg,
+                        rgba(0, 0, 0, 0.4) 0 ,
+                        rgba(0,0,0, 1)
+                    );
+                    bottom: -70px;
+                }
+        
+                .title {
+                    margin-bottom: 0;
+                    margin-top: 0;
+                    color: #fff;
+                    font-size: 24px;
+                    font-weight: 500;
+                    line-height: 24px;
+                }
+        
+                .description {
+                    font-size: 14px;
+                    margin-bottom: 5px;
+                    color: #fff;
+                    font-weight: 700;
+                }
+                .btn {
+                    margin-top: 30px;
+                    margin-bottom: 10px;
+                    padding: 0 23px;
+                    height: 40px;
+                    line-height: 34px;
+                    border: 2px solid #e88607;
+                    border-radius: 4px;
+                    font-size: 14px;
+                    color: #fff;
+                    background: transparent;
+                    text-transform: uppercase;
+                    font-weight: 700;
+                    transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+                    cursor: pointer;
+                }
+        
+                .btn:hover {
+                    transform: translateY(3px);
+                    background: #e88607;
+                }
+        
+                
+        
+                &:after {
+                    content: "";
+                    background: linear-gradient(180deg, #e88607, #000);
+                    position: absolute;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    top: 0;
+                    width: 100%;
+                    height: 100%;
+                    transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+                    opacity: 0;
+                    z-index: 2;
+                }
+        
+                &:hover:after {
+                    opacity: 0.3;                
+                }
+    
+                
+        
+                &:hover .content {
+                    bottom: 0;
+                    background: transparent;
+                }
+    
+    
+            }
+        }
+    
+        .galleryWrap {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            position: fixed;
+            z-index: 10;
+            overflow-y:scroll;
+            overflow-x:hidden;  
+    
+            .all-btn {
+                color: #fff;
+                opacity: 1;
+                
+                
+                .btnClose {
+                    position: fixed;
+                    cursor: pointer;
+                    top: 40px;
+                    right: 40px;
+                    z-index: 999;
+                }
+    
+                .btnPrev{
+                    position: fixed;
+                    cursor: pointer;
+                    top: 50%;
+                    left: 100px;
+                    z-index: 999;
+                }
+    
+                .btnNext{
+                    position: fixed;
+                    cursor: pointer;
+                    top: 50%;
+                    right: 100px;
+                    z-index: 999;
+                }
+            }
+                
+    
+            .fullScreenImage {
+                position: absolute;
+                top: 0;
+                left: 0;
+                display: flex;
+                justify-content: center;
+                background-color: rgba(0, 0, 0, 0.8);
+                z-index: 998;
+                width: 100%;
+                height: 100%;
+                overflow: hidden;            
+    
+                img {
+                    width: 70%;
+                    margin: auto;                    
+                    overflow: visible;
+                }
             }
         }
     }
+
+    
 
     
 }
