--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -187,7 +187,7 @@
                 left: 0;
                 display: flex;
                 justify-content: center;
-                background-color: rgba(0, 0, 0, 0.8);
+                // background-color: rgba(0, 0, 0, 0.8);
                 z-index: 998;
                 width: 100%;
                 height: 100%;
