--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -3,7 +3,7 @@
     padding-right: 50px;
     width: calc(100% - 150px);
     position: initial;
-    height: 100%;
+    height: auto;
     overflow: auto;
 
     h1.page-title {
