--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -136,7 +136,7 @@
         align-items: center;
         flex-direction: column;
         width: 100%;
-        height: 100%;
+        height: auto;
         top: 0;
         left: 0;
         right: 0;
