--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -4,7 +4,7 @@
     width: calc(100% - 150px);
     position: initial;
     height: auto;
-    overflow: auto;
+    overflow: scroll;
 
     h1.page-title {
         margin-left: 100px;
