--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -3,8 +3,7 @@
     padding-right: 50px;
     width: calc(100% - 150px);
     position: initial;
-    height: auto;
-    overflow: scroll;
+    height: 100%;
 
     h1.page-title {
         margin-left: 100px;
