--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -4,6 +4,7 @@
     width: calc(100% - 150px);
     position: initial;
     height: 100%;
+    overflow: auto;
 
     h1.page-title {
         margin-left: 100px;
