--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -148,6 +148,7 @@
         .all-btn {
             color: #fff;
             opacity: 1;
+            position: relative;
             
             
             .btnClose {
