--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -151,7 +151,7 @@
             .all-btn {
                 color: #fff;
                 opacity: 1;
-                position: relative;
+                position: fixed;
                 
                 
                 .btnClose {
