gallery btn change

--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -155,7 +155,7 @@
                 
                 
                 .btnClose {
-                    position: absolute;
+                    position: fixed;
                     cursor: pointer;
                     top: 40px;
                     right: 40px;
