--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -150,6 +150,8 @@
             .all-btn {
                 color: #fff;
                 opacity: 1;
+                width: 100%;
+                height: 100%;
                 
                 
                 .btnClose {
