--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -150,6 +150,7 @@
             .all-btn {
                 color: #fff;
                 opacity: 1;
+                position: fixed;
                 width: 100%;
                 height: 100%;
                 
