--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -187,6 +187,7 @@
                 background-color: rgba(0, 0, 0, 0.8);
                 z-index: 998;
                 width: 100%;
+                height: 100vh;
                 height: auto;
                 overflow: hidden;            
 
