--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -183,19 +183,24 @@
                 top: 0;
                 left: 0;
                 display: flex;
-                justify-content: center;
-                background-color: rgba(0, 0, 0, 0.8);
+                justify-content: center;                
                 z-index: 998;
                 width: 100%;
-                height: 100vh;
                 height: auto;
                 overflow: hidden;            
 
                 img {
-                    width: 70%;
+                    width: 100%;
                     margin: auto;                    
                     overflow: visible;
                 }
+            }
+
+            .fullScreenImage:before {
+                content: "";
+                width: 100vw;
+                height: 100vh;
+                background-color: rgba(0, 0, 0, 0.8);
             }
         }
     }
