--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -203,6 +203,12 @@
                 background-color: rgba(0, 0, 0, 0.8);
             }
         }
+        .galleryWrap:after {
+            content: "";
+                width: 100vw;
+                height: 100vh;
+                background-color: rgba(0, 0, 0, 0.8);
+        }
     }
 
     
