changes to Portfolio

--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -131,6 +131,7 @@
     }
 
     .portfolio-list {
+        height: 100%;
 
         .galleryWrap {
             display: flex;
@@ -139,10 +140,6 @@
             flex-direction: column;
             width: 100%;
             height: 100%;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
             position: fixed;
             z-index: 10;
             
@@ -197,7 +194,7 @@
         .galleryWrap:after {
             content: "";
                 width: 100vw;
-                height: 100vh;
+                height: 100%;
                 background-color: rgba(0, 0, 0, 0.8);
         }
     }
