--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -196,6 +196,7 @@
                 width: 100vw;
                 height: 100%;
                 background-color: rgba(0, 0, 0, 0.8);
+                z-index: 998;
         }
     }
 
