changes to Portfolio

--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -4,7 +4,7 @@
     width: calc(100% - 150px);
     position: initial;
     height: 100%;
-    overflow: auto;
+    overflow-x: hidden;
 
     h1.page-title {
         margin-left: 100px;
@@ -192,23 +192,21 @@
             }
 
         }
-        .galleryWrap:after {
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            content: "";
-            width: 100vw;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
-            z-index: 998;
-        }
+        
     }
 
-    
-
-    
+    &:after {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        content: "";
+        width: 100vw;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.8);
+        z-index: 998;
+    }    
 }
 
 @media screen and (max-width: 1200px) {
