--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -191,22 +191,24 @@
                 }
             }
 
+            &:after {
+                position: fixed;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
+                content: "";
+                width: 100vw;
+                height: 100%;
+                background-color: rgba(0, 0, 0, 0.8);
+                z-index: 998;
+            } 
+
         }
         
     }
 
-    &:after {
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        content: "";
-        width: 100vw;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.8);
-        z-index: 998;
-    }    
+       
 }
 
 @media screen and (max-width: 1200px) {
