--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -131,10 +131,15 @@
     }
 
     .portfolio-list {
-        height: 100%;
         position: relative;
         display: flex;
         justify-content: center;
+        overflow-y: scroll;
+
+        &:-webkit-scrollbar {
+            width: 0; 
+        }
+        
 
         .galleryWrap {
             display: flex;
@@ -145,6 +150,7 @@
             height: 100%;
             position: fixed;
             z-index: 10;
+            overflow-y: scroll;
             
 
             .all-btn {
@@ -189,7 +195,7 @@
                     width: 80%;
                     margin: auto;                    
                     overflow: visible;
-                    position: absolute;
+                    position: absolute; 
                     top: 0;
                     z-index: 998;
                 }
@@ -202,8 +208,7 @@
                     left: 0;
                     content: "";
                     background-color: rgba(0, 0, 0, 0.8);
-                } 
-    
+                }     
             }
             
         }
