--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -155,10 +155,11 @@
             align-items: center;
             flex-direction: column;
             width: 100%;
-            height: 100%;
+            height: 60vh;
             position: fixed;
             z-index: 10;
             overflow-y: scroll;
+            
             
 
             .all-btn {
