--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -155,11 +155,11 @@
             align-items: center;
             flex-direction: column;
             width: 100%;
-            height: 60vh;
+            height: 80vh;
             position: fixed;
             z-index: 10;
             overflow-y: scroll;
-            
+            top: 15%;
             
 
             .all-btn {
