--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -57,7 +57,7 @@
         font-family: 'Coolvetica';
         color: #e88607;
         font-weight: 400;
-        margin-top: 0;
+        margin-top: 40px;
         position: relative;
         margin-bottom: 40px;
         left: 10px;
@@ -77,6 +77,42 @@
 
         &::after {
             content: '<h1>';
+            font-family: 'La Belle Aurore';
+            font-size: 18px;
+            line-height: 18px;
+            position: absolute;
+            left:-30px;
+            bottom: -20px;
+            margin-left: 20px;
+            opacity:0.6;
+            color: #0e0e0e;  
+        }
+    }
+    h2 {
+        font-size: 40px;
+        font-family: 'Coolvetica';
+        color: #e88607;
+        font-weight: 300;
+        margin-top: 40px;
+        position: relative;
+        margin-bottom: 40px;
+        left: 10px;
+
+
+        &::before {
+            content: '<h2>';
+            font-family: 'La Belle Aurore';
+            font-size: 18px;
+            position: absolute;
+            margin-top: -10px;
+            left: -10px;
+            opacity: 0.6;
+            line-height: 18px;
+            color: #0e0e0e;
+        }
+
+        &::after {
+            content: '<h2>';
             font-family: 'La Belle Aurore';
             font-size: 18px;
             line-height: 18px;
@@ -127,8 +163,28 @@
         vertical-align: middle;
         display: table-cell;
         max-height: 90%;
+        overflow-x: hidden;
+        overflow-y: scroll;
+        scrollbar-width: none; /* Firefox */
+        -ms-overflow-style: none; /* Internet Explorer */
     }  
+    .text-zone::-webkit-scrollbar {
+        width: 0;
+        display: none;
+    }
     
+}
+
+.container.about-page {
+    .text-zone {
+        width: 40%;
+        height: 70%;
+
+        span {
+            color: #e88607;
+            font-weight: 500;
+        }
+    }
 }
 
 @media screen and (max-width: 1200px) {
@@ -163,7 +219,7 @@
             width: 100%;
             height: 0%;
             overflow: visible;
-          }
+        }
     }
     
 }
