--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -22,7 +22,7 @@
 
         .image-box {
             position: relative;
-            flex:  1 1 20%;
+            flex: 1 1 20%;
             height: 400px;
             overflow: hidden;
             border-radius: 10px;
@@ -37,7 +37,7 @@
                 transform: scale(1.5);
                 transform-origin: 50% 50%;
             }
-            
+
             .portfolio-image {
                 position: absolute;
                 z-index: 1;
@@ -46,21 +46,19 @@
                 object-fit: cover;
                 object-position: top;
             }
-    
+
             .content {
                 position: absolute;
                 width: 100%;
                 z-index: 3;
                 padding: 10px 20px;
                 transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
-                background: linear-gradient(
-                    180deg,
-                    rgba(0, 0, 0, 0.4) 0 ,
-                    rgba(0,0,0, 1)
-                );
+                background: linear-gradient(180deg,
+                        rgba(0, 0, 0, 0.4) 0,
+                        rgba(0, 0, 0, 1));
                 bottom: -70px;
             }
-    
+
             .title {
                 margin-bottom: 0;
                 margin-top: 0;
@@ -69,13 +67,14 @@
                 font-weight: 500;
                 line-height: 24px;
             }
-    
+
             .description {
                 font-size: 14px;
                 margin-bottom: 5px;
                 color: #fff;
                 font-weight: 700;
             }
+
             .btn {
                 margin-top: 30px;
                 margin-bottom: 10px;
@@ -92,14 +91,14 @@
                 transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
                 cursor: pointer;
             }
-    
+
             .btn:hover {
                 transform: translateY(3px);
                 background: #e88607;
             }
-    
-            
-    
+
+
+
             &:after {
                 content: "";
                 background: linear-gradient(180deg, #e88607, #000);
@@ -114,13 +113,13 @@
                 opacity: 0;
                 z-index: 2;
             }
-    
+
             &:hover:after {
-                opacity: 0.3;                
+                opacity: 0.3;
             }
 
-            
-    
+
+
             &:hover .content {
                 bottom: 0;
                 background: transparent;
@@ -138,16 +137,19 @@
         height: 60vh;
 
         &::-webkit-scrollbar {
-            width: 0; /* Width of the scrollbar */
-          }
-        
-          &::-webkit-scrollbar-thumb {
-            background-color: rgba(0, 0, 0, 0); /* Color of the scrollbar thumb */
-          }
-        
-          /* Firefox */
-          scrollbar-width: none; /* Hide the scrollbar in Firefox */
-        
+            width: 0;
+            /* Width of the scrollbar */
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: rgba(0, 0, 0, 0);
+            /* Color of the scrollbar thumb */
+        }
+
+        /* Firefox */
+        scrollbar-width: none;
+        /* Hide the scrollbar in Firefox */
+
 
         .galleryWrap {
             display: flex;
@@ -160,13 +162,13 @@
             z-index: 10;
             overflow-y: scroll;
             top: 15%;
-            
+
 
             .all-btn {
                 color: #fff;
                 opacity: 1;
-               
-                
+
+
                 .btnClose {
                     position: fixed;
                     cursor: pointer;
@@ -175,7 +177,7 @@
                     z-index: 999;
                 }
 
-                .btnPrev{
+                .btnPrev {
                     position: fixed;
                     cursor: pointer;
                     top: 50%;
@@ -183,7 +185,7 @@
                     z-index: 999;
                 }
 
-                .btnNext{
+                .btnNext {
                     position: fixed;
                     cursor: pointer;
                     top: 50%;
@@ -191,20 +193,20 @@
                     z-index: 999;
                 }
             }
-                
+
 
             .fullScreenImage {
                 display: flex;
-                justify-content: center;                
+                justify-content: center;
                 z-index: 998;
                 width: 100%;
-                height: auto;         
+                height: auto;
 
                 img {
                     width: 80%;
-                    margin: auto;                    
+                    margin: auto;
                     overflow: visible;
-                    position: absolute; 
+                    position: absolute;
                     top: 0;
                     z-index: 998;
                 }
@@ -217,14 +219,24 @@
                     left: 0;
                     content: "";
                     background-color: rgba(0, 0, 0, 0.8);
-                }     
+                }
+
+                .portfolio-video {
+                    position: fixed;
+                    top: 0;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    width: 100%;
+                    height: 100%;
+                    z-index: 10;
+                }
             }
-            
         }
-        
+
     }
 
-       
+
 }
 
 @media screen and (max-width: 1200px) {
@@ -237,40 +249,50 @@
             margin-left: 20px;
             margin-top: 20px;
         }
+
         .images-container {
             width: 100%;
             height: 100%;
 
             .image-box {
-        
+
                 max-width: calc(50% - 10px);
                 height: 400px;
                 flex: 50%;
             }
         }
-        
+
     }
 }
 
 @media screen and (max-width: 425px) {
-    
-    .portfolio-page { 
 
-        .images-container {
-            width: 100%;
-            height: 100%;
-    
-            .image-box {
-        
-                max-width: calc(50% - 10px);
-                height: 200px;
-                flex: 50%;
-            }
+    .portfolio-page {
 
-            .content .title {
-                font-size: 18px;
+        .portfolio-list {
+
+            .images-container {
+                width: 100%;
+                height: 100%;
+
+                .image-box {
+
+                    max-width: calc(50% - 10px);
+                    height: 200px;
+                    flex: 50%;
+                }
+
+                .content .title {
+                    font-size: 18px;
+                }
             }
         }
     }
-    
+}
+
+@media screen and (max-width: 600px) {
+    .portfolio-page .portfolio-list .images-container .image-box {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
 }
