--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -1,3 +1,28 @@
+.scroll-to-read-more {
+    transition: opacity 0.5s ease-in-out;
+    position: sticky;
+    bottom: 0;
+    text-align: center;
+    font-size: 1.2rem;
+    color: #000;
+    transition: opacity 0.3s ease-in-out;
+    background: #dbdbdb4a;
+    border-radius: 20px;
+    padding: 5px 20px;
+    width: 200px;
+    height: 20px;
+    margin: 0 auto;    
+
+    &.hidden {
+        opacity: 0;
+        pointer-events: none;
+    }
+
+    &.visible {
+        opacity: 1;
+        pointer-events: auto;
+    }
+}
 
 .stage-cube-cont {
     width: 50%;
